--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col">
+        <div class="row justify-content-between bg-black text-info">
+
+            <div class="col-4 text-center">
                 <p>Portfolio</p>
             </div>
-            <div class="col">
+            
+            <div class="col-4 text-center">
                 <p><u>CONTACT ME</u></p>
             </div>
+
         </div>
 
         <div class="col">
