--- a/index.html
+++ b/index.html
@@ -16,29 +16,35 @@
             <div class="col-4 text-center">
                 <p>Portfolio</p>
             </div>
-            
+
             <div class="col-4 text-center">
                 <p><u>CONTACT ME</u></p>
             </div>
 
         </div>
 
-        <div class="col">
+
+        <div class="row justify-content-center bg-info text-center">
+            <div class="col-4 mt-4 mb-5">
+                <img src="./img/undraw_profile_pic_ic5t.svg" class="img-fluid" alt="immagine profilo">
+                <h3>Pinco Pallo</h3>
+                <p>WEB DESIGNER</p>
+            </div>
 
         </div>
     </div>
 
-    <div class="col">
+    <div class="row">
 
     </div>
     </div>
 
-    <div class="col">
+    <div class="row">
 
     </div>
     </div>
 
-    <div class="col">
+    <div class="row">
 
     </div>
     </div>
