--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row justify-content-between bg-black text-info">
 
             <div class="col-4 text-center">
@@ -34,10 +34,85 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row justify-content-center text-center">
+
+
+        <div class="col-4 my-3">
+            <h3>PORTFOLIO</h3>
+        </div>
+    </div>
+    <div class="row justify-content-center text-center mx-5 gy-5">
+        <div class="col-4">
+            <div class="card">
+                <img src="./img/portfolio/cabin.png" alt="cabin">
+                <div class="card-body">
+                    <h5 class="card-title">Cabin Website</h5>
+                    <a href="#" class="btn bg-info">Preview</a>
+                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card">
+                <img src="./img/portfolio/cake.png" alt="cake">
+                <div class="card-body">
+                    <h5 class="card-title">Cake Website</h5>
+                    <a href="#" class="btn bg-info">Preview</a>
+                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card">
+                <img src="./img/portfolio/circus.png" alt="circus">
+                <div class="card-body">
+                    <h5 class="card-title">Circus Website</h5>
+                    <a href="#" class="btn bg-info">Preview</a>
+                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card">
+                <img src="./img/portfolio/game.png" alt="game">
+                <div class="card-body">
+                    <h5 class="card-title">Game Website</h5>
+                    <a href="#" class="btn bg-info">Preview</a>
+                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card">
+                <img src="./img/portfolio/safe.png" alt="safe">
+                <div class="card-body">
+                    <h5 class="card-title">Safe Website</h5>
+                    <a href="#" class="btn bg-info">Preview</a>
+                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="card">
+                <img src="./img/portfolio/submarine.png" alt="submarine">
+                <div class="card-body">
+                    <h5 class="card-title">Submarine Website</h5>
+                    <a href="#" class="btn bg-info">Preview</a>
+                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                </div>
+            </div>
+        </div>
+
+
+
 
     </div>
-    </div>
+
 
     <div class="row">
 
