--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h3>PORTFOLIO</h3>
         </div>
     </div>
-    <div class="row justify-content-center text-center mx-5 gy-5">
+    <div class="row justify-content-center text-center m-5 gy-5">
         <div class="col-4">
             <div class="card">
                 <img src="./img/portfolio/cabin.png" alt="cabin">
@@ -111,6 +111,14 @@
 
 
 
+    </div>
+
+    <div class="row justify-content-center text-center bg-info">
+
+
+        <div class="col-4 my-3 ">
+            <h3>WANT AN OFFER?</h3>
+        </div>
     </div>
 
 
