--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <div class="row justify-content-center text-center">
+    <div class="row justify-content-center text-center ">
 
 
         <div class="col-4 my-3">
@@ -119,6 +119,50 @@
         <div class="col-4 my-3 ">
             <h3>WANT AN OFFER?</h3>
         </div>
+
+    </div>
+    <div class="row g-3 bg-info">
+        <div class="col-md-6">
+            <label class="form-label">First name</label>
+            <input type="text" class="form-control" placeholder="Enter your first name...">
+        </div>
+        <div class="col-md-6">
+            <label class="form-label">Last name</label>
+            <input type="text" class="form-control" placeholder="Enter your last name...">
+        </div>
+        <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="inputEmail4" placeholder="name@example.com">
+        </div>
+        <div class="col-6">
+            <label class="form-label">Hours requested</label>
+            <input type="text" class="form-control" placeholder="Hours requested...">
+        </div>
+        <div class="col-md-6">
+            <label for="inputState" class="form-label">Type of work</label>
+            <select id="inputState" class="form-select">
+                <option selected="">Select the type of work</option>
+                <option> 1</option>
+                <option> 2</option>
+                <option> 3</option>
+                <option>...</option>
+            </select>
+        </div>
+        <div class="col-6">
+            <label class="form-label">Discount Code</label>
+            <input type="text" class="form-control">
+        </div>
+        <div class="col">
+            <label class="form-label">Message</label>
+            <input type="text" class="form-control" placeholder="Specify your work commission">
+        </div>
+        <div class="col-12 text-center">
+            <button type="submit" class="btn bg-warning text-black">Send</button>
+        </div>
+
+    </div>
+
+
     </div>
 
 
