--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row justify-content-between bg-black text-info">
+        <div class="row justify-content-between bg-dark text-info">
 
             <div class="col-4 text-center">
                 <p>Portfolio</p>
@@ -32,149 +32,150 @@
             </div>
 
         </div>
-    </div>
-
-    <div class="row justify-content-center text-center ">
 
 
-        <div class="col-4 my-3">
-            <h3>PORTFOLIO</h3>
+        <div class="row justify-content-center text-center ">
+
+
+            <div class="col-4 my-3">
+                <h3>PORTFOLIO</h3>
+            </div>
         </div>
-    </div>
-    <div class="row justify-content-center text-center m-5 gy-5">
-        <div class="col-4">
-            <div class="card">
-                <img src="./img/portfolio/cabin.png" alt="cabin">
-                <div class="card-body">
-                    <h5 class="card-title">Cabin Website</h5>
-                    <a href="#" class="btn bg-info">Preview</a>
-                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+        <div class="row justify-content-center text-center m-5 gy-5">
+            <div class="col-4">
+                <div class="card">
+                    <img src="./img/portfolio/cabin.png" alt="cabin">
+                    <div class="card-body">
+                        <h5 class="card-title">Cabin Website</h5>
+                        <a href="#" class="btn bg-info">Preview</a>
+                        <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                    </div>
                 </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="./img/portfolio/cake.png" alt="cake">
+                    <div class="card-body">
+                        <h5 class="card-title">Cake Website</h5>
+                        <a href="#" class="btn bg-info">Preview</a>
+                        <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="./img/portfolio/circus.png" alt="circus">
+                    <div class="card-body">
+                        <h5 class="card-title">Circus Website</h5>
+                        <a href="#" class="btn bg-info">Preview</a>
+                        <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="./img/portfolio/game.png" alt="game">
+                    <div class="card-body">
+                        <h5 class="card-title">Game Website</h5>
+                        <a href="#" class="btn bg-info">Preview</a>
+                        <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="./img/portfolio/safe.png" alt="safe">
+                    <div class="card-body">
+                        <h5 class="card-title">Safe Website</h5>
+                        <a href="#" class="btn bg-info">Preview</a>
+                        <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card">
+                    <img src="./img/portfolio/submarine.png" alt="submarine">
+                    <div class="card-body">
+                        <h5 class="card-title">Submarine Website</h5>
+                        <a href="#" class="btn bg-info">Preview</a>
+                        <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+        </div>
+
+        <div class="row justify-content-center text-center bg-info">
+
+
+            <div class="col-4 my-3 ">
+                <h3>WANT AN OFFER?</h3>
+            </div>
+
+        </div>
+        <div class="row bg-info">
+            <div class="col-6">
+                <label class="form-label">First name</label>
+                <input type="text" class="form-control" placeholder="Enter your first name...">
+            </div>
+            <div class="col-6">
+                <label class="form-label">Last name</label>
+                <input type="text" class="form-control" placeholder="Enter your last name...">
+            </div>
+            <div class="col-6">
+                <label for="inputEmail4" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="name@example.com">
+            </div>
+            <div class="col-6">
+                <label class="form-label">Hours requested</label>
+                <input type="text" class="form-control" placeholder="Hours requested...">
+            </div>
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Type of work</label>
+                <select id="inputState" class="form-select">
+                    <option selected="">Select the type of work</option>
+                    <option> 1</option>
+                    <option> 2</option>
+                    <option> 3</option>
+                    <option>...</option>
+                </select>
+            </div>
+            <div class="col-6">
+                <label class="form-label">Discount Code</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="col">
+                <label class="form-label">Message</label>
+                <input type="text" class="form-control" placeholder="Specify your work commission">
+            </div>
+            <div class="col-12 text-center mt-4 mb-5">
+                <button type="submit" class="btn bg-warning text-black">Send</button>
+            </div>
+
+        </div>
+
+
+        <div class="row text-center  text-secondary bg-dark">
+            <div class="col mt-5">
+                <h3>LOCATION</h3>
+                <p class="mb-n5 mt-3 pb-n2 fs-5">2215 John Daniel Drive</p>
+                <p class="mt-n5 mb-3 pt-n2 fs-5">Clark, MO 65243</p>
+                <p>copyright &copy; your website 2021</p>
             </div>
         </div>
 
-        <div class="col-4">
-            <div class="card">
-                <img src="./img/portfolio/cake.png" alt="cake">
-                <div class="card-body">
-                    <h5 class="card-title">Cake Website</h5>
-                    <a href="#" class="btn bg-info">Preview</a>
-                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
-                </div>
-            </div>
+        <div class="row">
+
+
         </div>
-
-        <div class="col-4">
-            <div class="card">
-                <img src="./img/portfolio/circus.png" alt="circus">
-                <div class="card-body">
-                    <h5 class="card-title">Circus Website</h5>
-                    <a href="#" class="btn bg-info">Preview</a>
-                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-4">
-            <div class="card">
-                <img src="./img/portfolio/game.png" alt="game">
-                <div class="card-body">
-                    <h5 class="card-title">Game Website</h5>
-                    <a href="#" class="btn bg-info">Preview</a>
-                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-4">
-            <div class="card">
-                <img src="./img/portfolio/safe.png" alt="safe">
-                <div class="card-body">
-                    <h5 class="card-title">Safe Website</h5>
-                    <a href="#" class="btn bg-info">Preview</a>
-                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-4">
-            <div class="card">
-                <img src="./img/portfolio/submarine.png" alt="submarine">
-                <div class="card-body">
-                    <h5 class="card-title">Submarine Website</h5>
-                    <a href="#" class="btn bg-info">Preview</a>
-                    <a href="#" class="btn bg-light text-info border-info ">Visit sit</a>
-                </div>
-            </div>
-        </div>
-
-
-
-
-    </div>
-
-    <div class="row justify-content-center text-center bg-info">
-
-
-        <div class="col-4 my-3 ">
-            <h3>WANT AN OFFER?</h3>
-        </div>
-
-    </div>
-    <div class="row g-3 bg-info">
-        <div class="col-md-6">
-            <label class="form-label">First name</label>
-            <input type="text" class="form-control" placeholder="Enter your first name...">
-        </div>
-        <div class="col-md-6">
-            <label class="form-label">Last name</label>
-            <input type="text" class="form-control" placeholder="Enter your last name...">
-        </div>
-        <div class="col-md-6">
-            <label for="inputEmail4" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="inputEmail4" placeholder="name@example.com">
-        </div>
-        <div class="col-6">
-            <label class="form-label">Hours requested</label>
-            <input type="text" class="form-control" placeholder="Hours requested...">
-        </div>
-        <div class="col-md-6">
-            <label for="inputState" class="form-label">Type of work</label>
-            <select id="inputState" class="form-select">
-                <option selected="">Select the type of work</option>
-                <option> 1</option>
-                <option> 2</option>
-                <option> 3</option>
-                <option>...</option>
-            </select>
-        </div>
-        <div class="col-6">
-            <label class="form-label">Discount Code</label>
-            <input type="text" class="form-control">
-        </div>
-        <div class="col">
-            <label class="form-label">Message</label>
-            <input type="text" class="form-control" placeholder="Specify your work commission">
-        </div>
-        <div class="col-12 text-center">
-            <button type="submit" class="btn bg-warning text-black">Send</button>
-        </div>
-
-    </div>
-
-
-    </div>
-
-
-    <div class="row">
-
-    </div>
-    </div>
-
-    <div class="row">
-
-    </div>
-    </div>
 
     </div>
 
