--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h3>PORTFOLIO</h3>
             </div>
         </div>
-        <div class="row justify-content-center text-center m-5 gy-5">
+        <div class="row justify-content-center text-center gy-5">
             <div class="col-4">
                 <div class="card">
                     <img src="./img/portfolio/cabin.png" alt="cabin">
@@ -154,7 +154,7 @@
             </div>
             <div class="col">
                 <label class="form-label">Message</label>
-                <input type="text" class="form-control" placeholder="Specify your work commission">
+                <textarea class="form-control" placeholder="Specify your work commission" rows="3"></textarea>
             </div>
             <div class="col-12 text-center mt-4 mb-5">
                 <button type="submit" class="btn bg-warning text-black">Send</button>
