--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h3>PORTFOLIO</h3>
             </div>
         </div>
-        <div class="row justify-content-center text-center gy-5">
+        <div class="row justify-content-center text-center mb-5 gy-5">
             <div class="col-4">
                 <div class="card">
                     <img src="./img/portfolio/cabin.png" alt="cabin">
